--- a/census_2020/dailyChangeMap/index.html
+++ b/census_2020/dailyChangeMap/index.html
@@ -16,7 +16,7 @@
     </div>
     <script src="../../lib/d3.js"></script>
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
-    <script src="http://d3js.org/topojson.v3.min.js"></script>
+    <script src="https://d3js.org/topojson.v3.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
