--- a/census_2020/Dashboard/index.html
+++ b/census_2020/Dashboard/index.html
@@ -26,7 +26,7 @@
     <div id="dashboard">
       <div id="Table"></div>
       <div id="Barchart"></div>
-      <div id="Counter"></div>
+    <!-- <div id="Counter"></div> -->
     </div>
     <h5>Source: U.S. Census Bureau, 2014-2018 ACS 5 year estimates allocated to new 2020 census tract geography. 
 
