--- a/census_2020/dailyChangeMap/index.html
+++ b/census_2020/dailyChangeMap/index.html
@@ -3,20 +3,21 @@
     <meta charset="utf-8">
     <title>Census 2020</title>
     <link rel="stylesheet" href="./style.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Census 2020 Daily Self-Response Rates</h1>
 
     <h2>Date: <span id="date">3/20/2020</span></h2>
     <p>Move the slider to change the date displayed.</p>
-    
+    <button id="play">Play</button>
     <input id="slider" type="range"></input>
+    <div id="interactiveLegend"></div>
     <div id="d3-container">
     </div>
     <script src="../../lib/d3.js"></script>
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main_zoom.js"></script>
   </body>
 </html>
