--- a/census_2020/dailyChangeMap/index.html
+++ b/census_2020/dailyChangeMap/index.html
@@ -10,7 +10,7 @@
 
     <h2>Date: <span id="date">3/20/2020</span></h2>
     <p>Move the slider to change the date displayed.</p>
-    <button id="play">Play</button>
+    <!--<button id="play">Play</button>-->
     <input id="slider" type="range"></input>
     <div id="interactiveLegend"></div>
     <div id="d3-container">
