--- a/census_2020/dailyChangeMap/index.html
+++ b/census_2020/dailyChangeMap/index.html
@@ -18,6 +18,6 @@
     <script src="../../lib/d3.js"></script>
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
-    <script src="main_zoom.js"></script>
+    <script type="module" src="main_zoom.js"></script>
   </body>
 </html>
