Added legend, updated tooltip

--- a/NYCvoters2016/index.html
+++ b/NYCvoters2016/index.html
@@ -14,11 +14,15 @@
         Below is a map of New York City depicting voters who were registered prior to the 2008 presidential election 
         but did not vote until the 2016 presidential election.
       </h3>  
-    <div id="d3-container" style="height: 600px" style="position: abolute;"></div>
+    <div id="legend"></div>
+    <div id="d3-container" style="height: 600px" style="position: abolute;">
+      
+    </div>
    <h5><i>Disclaimer: These voter records are geocoded to current election districts, not 2016 vintage districts. 
        The only voters that are shown in the numerator are those that were matched between 2013 and 2018 
-       voter history files from the NYC Board of Elections. Some of the election districts have been redrawn sionce 2016 
-       and the election results for those districts is not available.</i></h2>
+       voter history files from the NYC Board of Elections. Some of the election districts have been redrawn since 2016 
+       and the election results for those districts are not available. 
+      </br>Source: NYC Board of Elections via CUNY Center for Urban Research.</i></h2>
    </h5>
     </div>
     <script src="../lib/d3.js"></script>
