--- a/NYCvoters2016/Scatterplot/indexScatterplot.html
+++ b/NYCvoters2016/Scatterplot/indexScatterplot.html
@@ -46,7 +46,7 @@
       </div>
     <div id="scatterplot" style="position: abolute;">
     </div>
-    <script src="../../../lib/d3.js"></script>
+    <script src="../../lib/d3.js"></script>
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
     <script src="https://d3js.org/d3-random.v2.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
