updated with final loyout of project

--- a/NYCvoters2016/Map/indexMap.html
+++ b/NYCvoters2016/Map/indexMap.html
@@ -33,7 +33,7 @@
         <label for="dropdownWinner">District Winner</label>
         <select id="dropdownWinner" name="dropdownWinner"></select>
  -->
-    <div id="map" style="height: 600px;" style="position: abolute;">
+    <div id="map" style="height: 600px;" style="position: absolute;">
       <!-- <div id="infoPage"></div> -->
       <div id="legend"></div> 
       </div>
