Adding new redistricting testing files and viz

--- a/NYCvoters2016/finalLayout/index.html
+++ b/NYCvoters2016/finalLayout/index.html
@@ -101,7 +101,8 @@
           presidential election, but did not vote until the 2016 presidential election.
           The records are geocoded to current election districts, not 2016 vintage districts. 
           Some of the election districts have been redrawn since 2016 
-          and the election results for those districts are not available. 
+          and the election results for those districts are not available. The gender information supplied by the Board of Elections includes
+          only binary (male or female) gender identification. 
         </br>
         </br>Source: NYC Board of Elections via CUNY Center for Urban Research.</p>
       </div>
