--- a/RCV/index.html
+++ b/RCV/index.html
@@ -42,7 +42,7 @@
       </div>
     <div id="d3-container"> </div>
     </div>
-    <script src="../../lib/d3.js"></script>
+    <script src="../lib/d3.js"></script>
     <script type="module" src="main.js"></script>
 
   </body>
